# PokerOddsCalculator

./: CMakeLists.txt  POKER.sln  README.md  build.sh
POKER/: POKER.vcxproj  POKER.vcxproj.filters.txt  Poker_game.cpp  Poker_game.h  Poker_game.ui  Probability.cpp  Probability_calculator.cpp  card.cpp  card.h  iesire.txt  main.cpp  opponents.cpp  probabilitati6pre.txt  table.cpp  table.h
POKER/x64/Release/: POKER.exe.recipe
POKER/x64/Release/POKER.tlog/: POKER.lastbuildstate
POKER/x64/Release/moc/: moc_Poker_game.cpp  moc_card.cpp  moc_opponents.cpp  moc_table.cpp
POKER/x64/Release/uic/: ui_Poker_game.h
forms/: Poker_game.qrc  Poker_game.ui
include/: Card.hpp  Opponents.hpp  Poker_game.hpp  Probability.hpp  Probability_calculator.hpp  Table.hpp  card.hpp  opponents.hpp  str.hpp  table.hpp  ui_Poker_game.hpp
src/: CMakeLists.txt  Card.cpp  Opponents.cpp  Poker_game.cpp  Probability.cpp  Probability_calculator.cpp  Table.cpp  card.cpp  main.cpp  opponents.cpp  table.cpp
